# engmsc

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/dep/glad/: CMakeLists.txt
app/dep/glad/include/glad/: glad.h
app/dep/glad/src/: glad.c
app/include/engmsc-app/: ExhaustConfigCanvas.hpp  FlywheelRenderer.hpp  MainScreen.hpp
app/rsc/: verdana.fnt
app/rsc/fonts/: forced_square.fnt
app/rsc/mesh/: cube.ply  cyl_marker.ply  cyl_marker_highlighted.ply  flywheel.ply  offset_marker.ply  simple_flywheel.ply
app/src/: Application2.cpp  EngineMusicApplication.cpp  ExhaustConfigCanvas.cpp  FlywheelRenderer.cpp  MainScreen.cpp  main.cpp
app/src/api/: AudioStream.cpp  engmscapi.h
app/src/gui/: EngMuscGUI.h
dep/glad/: CMakeLists.txt
include/: Animation.hpp  AudioContext.hpp  AudioEvent.hpp  AudioFile.hpp  AudioFilter.hpp  AudioProducer.hpp  AudioStream.hpp  Button.hpp  Consolas_font.hpp  EMWindow.hpp  FontRenderer.hpp  GLInclude.hpp  Keyboard.hpp  Logger.hpp  Mesh.hpp  MeshBuilder.hpp  Mouse.hpp  Shaders.hpp  UIRender.hpp  Viewport.hpp  Widget.hpp  Window.hpp  gl3_shaders.hpp
include/engmsc/: AudioStream.hpp  BandFilter.hpp  Engine.hpp  Engine2DRenderer.hpp  EngineAudio.hpp  EnginePhysics.hpp  Gauge.hpp  IAudioContext.hpp  IAudioProducer.hpp  KickProducer.hpp  SoundEvent.hpp  SoundStream.hpp  WindProducer.hpp
include/engmsc/al/: ALAudioContext.hpp
res/: needle.ply  stubby_needle.ply
res/engine2D/: conrod.ply  crankshaft.ply  cylhead.ply  exhaust-valve.ply  intake-valve.ply  piston.ply
src/: Animation.cpp  AudioContext.cpp  AudioEvent.cpp  AudioFilter.cpp  AudioProducer.cpp  AudioStream.cpp  BandFilter.cpp  Button.cpp  EMWindow.cpp  FontRenderer.cpp  IAudioContext.cpp  IAudioProducer.cpp  Keyboard.cpp  KickProducer.cpp  Logger.cpp  Mesh.cpp  MeshBuilder.cpp  Mouse.cpp  Shaders.cpp  SoundEvent.cpp  UIRender.cpp  Viewport.cpp  Widget.cpp  WindProducer.cpp  Window.cpp  main.cpp
src/al/: ALAudioContext.cpp
src/engmsc/: Engine.cpp  Engine2DRenderer.cpp  EngineAudio.cpp  EnginePhysics.cpp  Gauge.cpp
tools/: README.txt  font_converter.py  tools_config.json  tools_core.py
